# git-xxchangelog

./: README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: azure.rs  git.rs
src-tauri/src/commands/azure/: azure_get_work_item.rs
src-tauri/src/commands/git/: git_refs_hash.rs  parse_git.rs
src/components/: ResizableColumns.tsx
src/components/AzureImage/: AzureImage.tsx
src/components/BranchLabel/: BranchLabel.tsx
src/components/GitMessage/: GitMessage.tsx
src/components/GitTable/: GitTable.tsx
src/components/Layouts/MainLayout/: MainLayout.store.ts  MainLayout.tsx
src/components/Scrollbars/: MiniMapScrollbar.module.scss  MinimapScrollbar.tsx
src/components/Tabs/: Tabs.tsx
src/hooks/tauri/: tauriLibs.hook.ts
src/pages/: _app.tsx  index.tsx
src/pages/git/: [id].tsx
src/pages/new-tab/: index.tsx
src/pages/settings/: index.tsx
src/stores/: git.store.ts  root.store.ts  session.store.ts  settings.store.ts
src/styles/: globals.css  preflight.css
