[package]
name = "app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
git2 = "0.17.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.8.1"
azure_devops_rust_api = { version = "0.7.5", features = ["wit"] }
twox-hash = "1.6.3"
tauri = { version = "1.2.4", features = ["dialog-all", "fs-all", "http-all", "path-all", "shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
